# PyDangerous

./: README.md  setup.cfg
src/PyDangerous/: main.py  pydangerous.py
src/PyDangerous/structures/: events.py
src/PyDangerous/structures/exploration/: bodies.py
