[metadata]
name = PyDangerous-Captain_D1
version = 0.1.0
author = Captain_D1
description = A Python API for the Elite Dangerous event journal
long_description = file: README.metadata
long_description_content_type = text/markdown
url = https://github.com/CaptainD1/PyDangerous
project_urls = 
    Bug Tracker = https://github.com/CaptainD1/PyDangerous/issues
classifiers =
    Programming Language :: Python 3
    License :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    watchdog

[options.packages.find]
where = src